--- a/package.json
+++ b/package.json
@@ -2,35 +2,29 @@
   "name": "core-spendly-be",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "start": "tsc && node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/body-parser": "^1.19.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.0.1",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2"
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "nodemon": "^3.1.11"
   },
   "dependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/supertest": "^6.0.3",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jest": "^30.2.0",
     "mongoose": "^9.0.1",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
+    "supertest": "^7.1.4"
   }
 }
